# pred-ripper

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  models.rs
