[package]
name = "pred-ripper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.30"
zip = "0.6.6"
walkdir = "2.4.0"
